<resources>
    <string name="app_name">ePassApp</string>
    <string name="wait_for_the_naccount_to_be_verified">WAIT FOR THE \nACCOUNT TO BE VERIFIED \n\n (Pull down to refresh)</string>
    <string name="generate_pass">GENERATE PASS</string>
    <string name="phone_number">Phone number</string>
    <string name="generate">GENERATE</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="otp">OTP</string>
    <string name="don_t_recived_the_code">Don\'t Received The code ?</string>
    <string name="profile">Create an account </string>
    <string name="enter_name">Enter Name</string>
    <string name="post">POST</string>
    <string name="register">register</string>
    <string name="enter_truck_no">Enter Truck No</string>
    <string name="pit_owner">Pit Owner</string>
    <string name="section_number">Section Number</string>
    <string name="bench_number">Bench Number</string>
    <string name="date">Date</string>
    <string name="mine_number">Mine Number</string>
    <string name="serial_number">Serial Number</string>
    <string name="truck_number">Truck Number</string>
    <string name="serial_no">Serial No. :</string>
    <string name="pass_issued_date">Pass Issued Date : </string>
    <string name="mines_no">Mines No. :</string>
    <string name="pit_owner1">Pit Owner :</string>
    <string name="section_no">Section No. :</string>
    <string name="bench_no">Bench No. :</string>
    <string name="truck_no">Truck No. :</string>
    <string name="edit">EDIT</string>
    <string name="reject">REJECT</string>
    <string name="accept">Approve</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="sign_here">SIGN HERE</string>
    <string name="cancel">Cancel</string>
    <string name="mr_x">Mr.x</string>
    <string name="mine">Mine</string>
    <string name="contractor_name">Contractor Name :</string>
    <string name="contractor">Contractor</string>
    <string name="active_passes">Active Passes</string>
    <string name="generate_pass1">Generate Pass</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="online_gate_pass_for_truck_loading"><u>ONLINE GATE PASS FOR TRUCK LOADING</u></string>
    <string name="ultratech_cement_ltd">ULTRATECH CEMENT LTD.</string>
    <string name="rajshree_limestone_mines"><u>Rajshree Limestone Mines</u></string>
    <string name="already_having_an_account_log_in">Already having an account? <u>Log In</u></string>
    <string name="unit_birla_white">(Unit : Birla White)</string>
    <string name="send_code_again">Send code again</string>
    <string name="pass_issued_by">Pass Issued By :</string>
    <string name="delete_account">Delete Account</string>
    <string name="approve_account">Approve account</string>
    <string name="user_name">User Name : </string>
    <string name="post1">Post : </string>
    <string-array name="post">
        <item>Select an option</item>
        <item>Contractor</item>
        <item>Truck driver</item>
        <item>Way Bridge</item>
        <item>Site Incharge</item>
        <item>Pit Owner</item>
    </string-array>
    <string-array name="mine">
        <item>Select an option</item>
        <item>Mine Number 1</item>
        <item>Mine Number 2</item>
    </string-array>
    <string-array name="contractors">
        <item>Select an option</item>
        <item>Charbhuja</item>
        <item>Mateshwari</item>
        <item>Vinayak</item>
    </string-array>
</resources>
