<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/verify_your_number"
            android:textAlignment="center"
            android:textColor="#0e0e0e"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/phone_number"
            android:textColorHint="@color/txtclr"
            app:boxStrokeColor="@color/bgcolor1"
            app:hintEnabled="true"
            app:hintTextColor="@color/bgcolor1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnsignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/verify"
            android:textColor="#ffffff"
            app:backgroundTint="#283959"
            app:cornerRadius="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/verify_otp"
                    android:textAlignment="center"
                    android:textColor="#0e0e0e"
                    android:textSize="30sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/otp"
                    android:textColorHint="@color/txtclr"
                    app:boxStrokeColor="@color/bgcolor1"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/bgcolor1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/verify"
                    android:textColor="@color/white"
                    app:backgroundTint="#283959"
                    app:cornerRadius="8dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_recived_the_code"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/resend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_name"
            android:textColorHint="@color/txtclr"
            app:boxStrokeColor="@color/bgcolor1"
            app:hintEnabled="true"
            app:hintTextColor="@color/bgcolor1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/black_border"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/post"
                android:textColor="#0e0e0e" />

            <Spinner
                android:id="@+id/spinner_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/post" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/truck_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_truck_no"
            android:visibility="gone"
            android:textColorHint="@color/txtclr"
            app:boxStrokeColor="@color/bgcolor1"
            app:hintEnabled="true"
            app:hintTextColor="@color/bgcolor1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="10dp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:backgroundTint="#283959"
            app:cornerRadius="8dp" />
    </LinearLayout>
</RelativeLayout>