<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pass_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pass_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/username_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/user_name"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:text="45454"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/username_heading"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/post_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/post1"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_heading" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:text="45454"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/post_heading"
                app:layout_constraintTop_toBottomOf="@id/username" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/number_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_heading" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:text="45454"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/number_heading"
                app:layout_constraintTop_toBottomOf="@id/post" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/truck_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/truck_number"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_heading" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/truck_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:text="45454"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/truck_heading"
                app:layout_constraintTop_toBottomOf="@id/number" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/under_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/contractor_name"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/truck_heading" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:text="45454"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/under_heading"
                app:layout_constraintTop_toBottomOf="@id/truck_number" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/signature_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_heading7">

                <ImageView
                    android:id="@+id/signature"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="20dp"
                    android:layout_height="100dp"
                    android:indeterminateTint="#283959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/approver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mr_x"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold|normal"
                    app:layout_constraintTop_toBottomOf="@+id/signature" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/action_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/circularbordersolid"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/under_heading">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/account_reject"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/gradient"
                    android:gravity="center"
                    android:text="@string/reject"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/account_accept"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/gradient"
                    android:gravity="center"
                    android:text="@string/accept"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>